Fix Home page layout on mobiles (Fixes #1341)

--- a/src/components/app/Home.css
+++ b/src/components/app/Home.css
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: auto;
   line-height: 1.5;
 }
 
@@ -78,14 +79,24 @@
 }
 
 .homeTitle {
-  margin-top: 0;
-  margin-bottom: 0.5em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 -0.5em 0.5em;
   padding-bottom: 0.5em;
   border-bottom: 1px solid #DDD;
 }
 
+.homeTitleSlogan {
+  margin: 0 0.5em;
+}
+
 .homeTitleSubtext {
   font-weight: normal;
+}
+
+.homeTitleGithubIcon {
+  margin: 0 0.5em;
 }
 
 .homeTitleGithubIcon {
